# sky_pro_test_20250223

./: README.md  main.py  pyproject.toml
src/: homework_functions.py
src/processing/: homework_functions.py
